# sdk_0.20.1

./: CHANGELOG.md  Cargo.toml  README.md  remove-outputs.sh  test-andes.sh  wat-build.sh  zip-example-wasm.sh
contracts/examples/bonding-curve-contract/: Cargo.toml
contracts/examples/bonding-curve-contract/abi/: Cargo.toml
contracts/examples/bonding-curve-contract/denali/: buy.scen.json  claim.scen.json  deploy.scen.json  deposit.scen.json  deposit_more_view.scen.json  sell.scen.json  set_bonding_curve.scen.json
contracts/examples/bonding-curve-contract/src/: lib.rs
contracts/examples/bonding-curve-contract/wasm/: Cargo.toml
contracts/examples/crypto-kitties/kitty-auction/: Cargo.toml
contracts/examples/crypto-kitties/kitty-genetic-alg/: Cargo.toml
contracts/examples/erc1155/: Cargo.toml
contracts/examples/erc1155-marketplace/abi/: Cargo.toml
contracts/examples/erc1155-user-mock/abi/: Cargo.toml
contracts/examples/erc1155/abi/: Cargo.toml
contracts/examples/erc1155/src/: erc1155.rs  erc1155_user_proxy.rs
contracts/examples/erc1155/tests/: erc1155_denali_go_test.rs  erc1155_denali_rs_test.rs
contracts/examples/erc1155/wasm/: Cargo.toml
contracts/examples/erc20/abi/: Cargo.toml
contracts/examples/lottery-erc20/: Cargo.toml  documentation.md
contracts/examples/lottery-erc20/abi/: Cargo.toml
contracts/examples/lottery-erc20/src/: lottery.rs  lottery_info.rs  status.rs
contracts/examples/lottery-erc20/tests/: lottery_erc20_denali_go_test.rs  lottery_erc20_denali_rs_test.rs
contracts/examples/lottery-erc20/wasm/: Cargo.toml
contracts/examples/nft-storage-prepay/abi/: Cargo.toml
contracts/examples/order-book/factory/: Cargo.toml
contracts/examples/ping-pong-rewa/: Cargo.toml
contracts/examples/ping-pong-rewa/abi/: Cargo.toml
contracts/examples/ping-pong-rewa/denali/: ping-pong-call-ping-after-deadline.scen.json  ping-pong-call-ping-before-activation.scen.json  ping-pong-call-ping-before-beginning.scen.json  ping-pong-call-ping-second-user.scen.json  ping-pong-call-ping-twice.scen.json  ping-pong-call-ping-wrong-ammount.scen.json  ping-pong-call-ping.scen.json  ping-pong-call-pong-all-after-pong.scen.json  ping-pong-call-pong-all-interrupted-1.scen.json  ping-pong-call-pong-all-interrupted-2.scen.json  ping-pong-call-pong-all.steps.json  ping-pong-call-pong-before-deadline.scen.json  (+4 more)
contracts/examples/rewa-dcdt-swap/: Cargo.toml
contracts/feature-tests/composability/: Cargo.toml
contracts/feature-tests/payable-features/: Cargo.toml
contracts/feature-tests/use-module/: Cargo.toml  use_module_expected.abi.json
contracts/modules/numbat-wasm-module-bonding-curve/: Cargo.toml
contracts/modules/numbat-wasm-module-dns/: Cargo.toml
contracts/modules/numbat-wasm-module-governance/: Cargo.toml  README.md
numbat-codec/: Cargo.toml
numbat-codec/src/: lib.rs  nested_de.rs
numbat-codec/tests/: derive_empty_struct_test.rs  derive_enum_or_default_test.rs  derive_enum_test.rs  derive_enum_tricky_defaults_fieldless_test.rs  derive_enum_tricky_defaults_test.rs  derive_hygiene.rs  derive_struct_or_default_generic_test.rs  derive_struct_or_default_test.rs  derive_struct_test.rs  derive_struct_with_generic_test.rs  derive_tuple_struct_test.rs  explicit_impl_enum.rs  explicit_impl_struct.rs  explicit_impl_wrapped_array.rs
numbat-wasm/: Cargo.toml  README.md
numbat-wasm-debug/: Cargo.toml  andes.sh
numbat-wasm-debug/src/: andes_denali_runner.rs  async_data.rs  blockchain_mock.rs  builtin_func_exec.rs  contract_map.rs  display_util.rs  execute_denali.rs  lib.rs  managed_test_util.rs  tx_context.rs  tx_input.rs  tx_log.rs  tx_managed_types.rs  tx_output.rs
numbat-wasm-debug/src/abi_json/: build_info_abi_json.rs  contract_abi_json.rs  endpoint_abi_json.rs  mod.rs  type_abi_json.rs
numbat-wasm-debug/src/api/: blockchain_api_mock.rs  call_value_api_mock.rs  crypto_api_mock.rs  endpoint_arg_api_mock.rs  endpoint_finish_api_mock.rs  error_api_mock.rs  log_api_mock.rs  send_api_mock.rs  storage_api_mock.rs  vm_api_mock.rs
numbat-wasm-debug/src/denali_step/: check_state.rs  execute_helper_functions.rs  sc_call.rs  sc_deploy.rs  sc_query.rs  set_state.rs  transfer.rs
numbat-wasm-debug/tests/: framework_denali_test.rs  hex_call_data_arg_load.rs  managed_codec_test.rs  managed_token_identifier_test.rs  sample_adder.rs  test_hash_map_mapper.rs  test_hash_map_storage_mapper.rs  test_hash_set_mapper.rs  test_linked_list_mapper.rs  test_queue_mapper.rs
numbat-wasm-debug/tests/denali/: builtin-func-dcdt-transfer.scen.json  multi-transfer-dcdt.scen.json  transfer-dcdt.scen.json  transfer-rewa.scen.json  validatorReward.scen.json
numbat-wasm-derive/: Cargo.toml
numbat-wasm-derive/src/: contract_impl.rs  macro_proxy.rs  type_abi_derive.rs
numbat-wasm-derive/src/generate/: abi_gen.rs  arg_regular.rs  auto_impl_event.rs  auto_impl_storage.rs  callback_gen.rs  callback_proxies_gen.rs  contract_gen.rs  method_call_gen.rs  payable_gen.rs  proxy_gen.rs  snippets.rs  supertrait_gen.rs
numbat-wasm-derive/src/model/: payable.rs
numbat-wasm-derive/src/parse/: payable_parse.rs
numbat-wasm-derive/src/preprocessing/: substitution_list.rs
numbat-wasm-derive/src/validate/: validate_method.rs
numbat-wasm-node/: Cargo.toml  README.md
numbat-wasm-node/src/api/: blockchain_api_node.rs  call_value_api_node.rs  crypto_api_node.rs  endpoint_arg_api_node.rs  endpoint_finish_api_node.rs  error_api_node.rs  log_api_node.rs  send_api_node_legacy.rs  send_api_node_managed.rs  storage_api_node.rs  vm_api_node.rs
numbat-wasm-output/: Cargo.toml
numbat-wasm/src/: err_msg.rs  lib.rs  log_util.rs  macros.rs
numbat-wasm/src/abi/: build_info_abi.rs
numbat-wasm/src/api/: blockchain_api.rs  call_value_api.rs  mod.rs  send_api.rs
numbat-wasm/src/dcdt/: system_sc_proxy.rs
numbat-wasm/src/hex_call_data/: cd_de.rs  cd_ser.rs
numbat-wasm/src/io/: arg_de_input.rs  contract_call_arg.rs  dyn_arg.rs  dyn_arg_input.rs  dyn_arg_output.rs  finish.rs  macro_helpers.rs  signal_error.rs
numbat-wasm/src/storage/: storage_get.rs  storage_key.rs  storage_set.rs
(+532 files in other folders)
