[package]
name = "numbat-codec"
version = "0.7.0"
edition = "2018"

authors = ["Andrei Marinica <andrei.marinica@numbat.com>", "Numbat Network <contact@numbat.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Thrivenee/sdk_0.20.1.git"
homepage = "https://numbat.com/"
documentation = "https://docs.numbat.com/"
description = "Lightweight binary serializer/deserializer, written especially for Numbat smart contracts"
keywords = ["numbat", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools"]

[features]
derive = ["numbat-codec-derive"]

[dependencies.numbat-codec-derive]
path = "../numbat-codec-derive"
version = "=0.7.0"
optional = true

[dependencies]
wee_alloc = "0.4"
arrayvec = { version = "0.7.1", default-features = false }

[dev-dependencies.numbat-codec-derive]
path = "../numbat-codec-derive"
version = "=0.7.0"
