[package]
name = "numbat-wasm-debug"
version = "0.20.1"
edition = "2018"

authors = ["Andrei Marinica <andrei.marinica@numbat.com>", "Numbat Network <contact@numbat.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Thrivenee/sdk_0.20.1.git"
homepage = "https://numbat.com/"
documentation = "https://docs.numbat.com/"
description = "Numbat WebAssembly smart contract API debugging mocks and utils"
keywords = ["numbat", "blockchain", "contract", "debug"]
categories = ["cryptography::cryptocurrencies", "development-tools::debugging"]

[dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
sha2 = "0.9.2"
sha3 = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustc_version = "0.4"

[features]
andes-tests = []

[dependencies.numbat-wasm]
version = "0.20.1"
path = "../numbat-wasm"
features = ["derive"]

[dependencies.denali]
version = "0.10.0"
path = "../denali"
