[package]
name = "numbat-wasm-output"
version = "0.20.1"
edition = "2018"

authors = ["Andrei Marinica <andrei.marinica@numbat.com>", "Numbat Network <contact@numbat.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Thrivenee/sdk_0.20.1.git"
homepage = "https://numbat.com/"
documentation = "https://docs.numbat.com/"
description = "Numbat WebAssembly panic handler and allocator declaration for the .wasm output"
keywords = ["numbat", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools::ffi"]

[features]
# crate functionality can be turned off
# is only turned off when running the framework tests
wasm-output-mode = [] 

# only provide panic messages if so configured
# they add a lot of bloat to the final bytecode,
# so only use them if you really need to learn about a certain panic occuring at some point
panic-message = [] 

[dependencies]
wee_alloc = "0.4"

[dependencies.numbat-wasm-node]
version = "0.20.1"
path = "../numbat-wasm-node"
