[package]
name = "bonding-curve-contract"
version = "0.0.0"
authors = ["Alin Cruceat <alin.cruceat@numbat.com>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = [
    "numbat-wasm-node",
    "numbat-wasm-module-bonding-curve/wasm-output-mode"
]

[dependencies.numbat-wasm-module-bonding-curve]
version = "0.20.1"
path = "../../modules/numbat-wasm-module-bonding-curve"

[dependencies.numbat-wasm]
version = "0.20.1"
path = "../../../numbat-wasm"
features = ["derive"]

[dependencies.numbat-wasm-node]
version = "0.20.1"
path = "../../../numbat-wasm-node"
optional = true

[dev-dependencies.numbat-wasm-debug]
version = "0.20.1"
path = "../../../numbat-wasm-debug"

