[package]
name = "lottery-erc20"
version = "0.0.0"
authors = [ "Dorin Iancu <dorin.iancu@numbat.com>",]
edition = "2018"
publish = false

[lib]
path = "src/lottery.rs"

[features]
wasm-output-mode = [ "numbat-wasm-node",]

[dependencies.numbat-wasm]
version = "0.20.1"
path = "../../../numbat-wasm"
features = ["derive", "cb_closure_managed_deser"]

[dependencies.numbat-wasm-node]
version = "0.20.1"
path = "../../../numbat-wasm-node"
optional = true

[dependencies.erc20]
path = "../erc20"

[dev-dependencies.numbat-wasm-debug]
version = "0.20.1"
path = "../../../numbat-wasm-debug"
