[package]
name = "ping-pong-rewa"
version = "0.0.2"
authors = [ "Bruda Claudiu-Marcel <claudiu725@yahoo.com>",]
edition = "2018"
publish = false

[lib]
path = "src/ping_pong.rs"

[features]
wasm-output-mode = ["numbat-wasm-node"]

[dependencies.numbat-wasm]
version = "0.20.1"
path = "../../../numbat-wasm"
features = ["derive"]

[dependencies.numbat-wasm-node]
version = "0.20.1"
path = "../../../numbat-wasm-node"
optional = true

[dev-dependencies.numbat-wasm-debug]
version = "0.20.1"
path = "../../../numbat-wasm-debug"
