[package]
name = "payable-features"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@numbat.com>"]
edition = "2018"
publish = false

[lib]
path = "src/payable_features.rs"

[features]
wasm-output-mode = ["numbat-wasm-node"]

[dependencies.numbat-wasm]
version = "0.20.1"
path = "../../../numbat-wasm"
features = ["derive"]

[dependencies.numbat-wasm-node]
version = "0.20.1"
path = "../../../numbat-wasm-node"
optional = true

[dev-dependencies.numbat-wasm-debug]
version = "0.20.1"
path = "../../../numbat-wasm-debug"
