[package]
name = "numbat-wasm-module-bonding-curve"
version = "0.20.1"
edition = "2018"

authors = ["Alin Cruceat <alin.cruceat@numbat.com>", "Numbat Network <contact@numbat.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Thrivenee/sdk_0.20.1.git"
homepage = "https://numbat.com/"
documentation = "https://docs.numbat.com/"
description = "Numbat Webassembly smart contract module that allows an address to sell tokens through a contract by defining a bonding curve that controls the evolution of the price"
keywords = ["numbat", "wasm", "bonding-curve", "blockchain", "contract"]
categories = ["no-std", "wasm"]

[features]
wasm-output-mode = ["numbat-wasm-node"]

[dependencies.numbat-wasm]
version = "0.20.1"
path = "../../../numbat-wasm"
features = ["derive"]

[dependencies.numbat-wasm-node]
version = "0.20.1"
path = "../../../numbat-wasm-node"
optional = true

[dev-dependencies.numbat-wasm-debug]
version = "0.20.1"
path = "../../../numbat-wasm-debug"
