[package]
name = "bonding-curve-contract-abi"
version = "0.0.0"
authors = ["Alin Cruceat <alin.cruceat@numbat.com>"]
edition = "2018"
publish = false

[dependencies.bonding-curve-contract]
path = ".."

[dependencies.numbat-wasm]
version = "0.20.1"
path = "../../../../numbat-wasm"

[dependencies.numbat-wasm-debug]
version = "0.20.1"
path = "../../../../numbat-wasm-debug"
