[package]
name = "kitty-auction"
version = "0.0.0"
authors = [ "dorin-iancu <dorin.iancu@numbat.com>",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = [ "numbat-wasm-node",]

[dependencies.kitty]
version = "0.0.0"
path = "../common/kitty"

[dependencies.kitty-ownership]
version = "0.0.0"
path = "../kitty-ownership"

[dependencies.numbat-wasm]
version = "0.20.1"
path = "../../../../numbat-wasm"
features = ["derive"]

[dependencies.numbat-wasm-node]
version = "0.20.1"
path = "../../../../numbat-wasm-node"
optional = true

[dev-dependencies.numbat-wasm-debug]
version = "0.20.1"
path = "../../../../numbat-wasm-debug"
