[package]
name = "nft-storage-prepay-abi"
version = "0.0.0"
authors = [ "Dorin Iancu <dorin.iancu@numbat.com>",]
edition = "2018"
publish = false

[dev-dependencies]

[dependencies.nft-storage-prepay]
path = ".."

[dependencies.numbat-wasm]
version = "0.20.1"
path = "../../../../numbat-wasm"

[dependencies.numbat-wasm-debug]
version = "0.20.1"
path = "../../../../numbat-wasm-debug"
