[package]
name = "order-book-factory"
version = "0.0.0"
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = ["numbat-wasm-node"]

[dependencies.numbat-wasm]
version = "0.20.1"
path = "../../../../numbat-wasm"
features = ["derive"]

[dependencies.numbat-wasm-node]
version = "0.20.1"
optional = true
path = "../../../../numbat-wasm-node"

[dev-dependencies.numbat-wasm-debug]
version = "0.20.1"
path = "../../../../numbat-wasm-debug"

