[package]
name = "dcdt-contract-pair"
version = "0.0.0"
authors = ["Dorin Iancu <dorin.iancu@numbat.com>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = ["numbat-wasm-node"]

[dependencies.first-contract]
path = "first-contract"

[dependencies.second-contract]
path = "second-contract"

[dependencies.numbat-wasm]
version = "0.20.1"
path = "../../../../numbat-wasm"
features = ["derive"]

[dependencies.numbat-wasm-node]
version = "0.20.1"
path = "../../../../numbat-wasm-node"
optional = true

[dev-dependencies.numbat-wasm-debug]
version = "0.20.1"
path = "../../../../numbat-wasm-debug"
